@@ -74,7 +74,7 @@
 #define XCHAL_HAVE_LOOPS		1
 
 #undef XCHAL_HAVE_THREADPTR
-#define XCHAL_HAVE_THREADPTR		1
+#define XCHAL_HAVE_THREADPTR		0
 
 #undef XCHAL_HAVE_RELEASE_SYNC
 #define XCHAL_HAVE_RELEASE_SYNC		0
@@ -102,6 +102,9 @@
 
 #undef XCHAL_HAVE_WINDOWED
 #define XCHAL_HAVE_WINDOWED		1
+
+#undef XCHAL_NUM_AREGS
+#define XCHAL_NUM_AREGS			64
 
 #undef XCHAL_HAVE_WIDE_BRANCHES
 #define XCHAL_HAVE_WIDE_BRANCHES	0
@@ -151,6 +154,9 @@
 #undef XCHAL_DEBUGLEVEL
 #define XCHAL_DEBUGLEVEL		4
 
+
+#undef XCHAL_MAX_INSTRUCTION_SIZE
+#define XCHAL_MAX_INSTRUCTION_SIZE	3
 
 #undef XCHAL_INST_FETCH_WIDTH
 #define XCHAL_INST_FETCH_WIDTH		4
